--- a/src/components/githubRepoCard/GithubRepoCard.css
+++ b/src/components/githubRepoCard/GithubRepoCard.css
@@ -77,6 +77,7 @@
 
 .dark-card-mode {
   background-color: #171c28 !important;
+  box-shadow: 0px 0px 16px #d9dbdf;
   color: white;
 }
 .dark-card-mode p {
