--- a/src/components/softwareSkills/SoftwareSkill.css
+++ b/src/components/softwareSkills/SoftwareSkill.css
@@ -13,6 +13,72 @@
   margin-bottom: 20px;
 }
 
+.csharp-custom-icon {
+  background-image: url('../../assets/images/csharp.png');
+  background-size: 50px;
+  height: 50px;
+  width: 50px;
+  background-repeat: no-repeat;
+}
+
+.vuejs-custom-icon {
+  background-image: url('../../assets/images/vuejs.png');
+  background-size: 50px;
+  height: 50px;
+  width: 50px;
+  background-repeat: no-repeat;
+}
+
+.sql-custom-icon {
+  background-image: url('../../assets/images/sql.png');
+  background-size: 50px;
+  height: 50px;
+  width: 50px;
+  background-repeat: no-repeat;
+}
+.nodejs-custom-icon {
+  background-image: url('../../assets/images/nodejs.png');
+  background-size: 50px;
+  height: 50px;
+  width: 50px;
+  background-repeat: no-repeat;
+}
+
+.js-custom-icon {
+  background-image: url('../../assets/images/js.png');
+  background-size: 50px;
+  height: 50px;
+  width: 50px;
+  background-repeat: no-repeat;
+}
+.html-custom-icon {
+  background-image: url('../../assets/images/html.webp');
+  background-size: 50px;
+  height: 50px;
+  width: 50px;
+  background-repeat: no-repeat;
+}
+.css-custom-icon {
+  background-image: url('../../assets/images/css.webp');
+  background-size: 50px;
+  height: 50px;
+  width: 50px;
+  background-repeat: no-repeat;
+}
+.mongodb-custom-icon {
+  background-image: url('../../assets/images/mongodb.png');
+  background-size: 50px;
+  height: 50px;
+  width: 50px;
+  background-repeat: no-repeat;
+}
+.oracle-custom-icon {
+  background-image: url('../../assets/images/oracle.png');
+  background-size: 50px;
+  height: 50px;
+  width: 50px;
+  background-repeat: no-repeat;
+}
 .software-skill-inline > i {
   color: #868e96;
 }
